# vhdl-style-guide

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml
docs/: conf.py  configuring_indentation.rst  configuring_overview.rst  configuring_pragmas.rst  constant_rules.rst  instantiation_rules.rst  localizing.rst  rules.rst  signal_rules.rst  usage.rst  variable_rules.rst  when_rules.rst
docs/theory_of_operation/: classifying.rst
docs/tool_integration/: generic.rst
tests/: utils.py
tests/after/: test_rule_001.py  test_rule_002.py  test_rule_003.py
tests/alias_declaration/: test_rule_001.py  test_rule_100.py  test_rule_101.py  test_rule_102.py  test_rule_103.py  test_rule_300.py  test_rule_500.py  test_rule_501.py  test_rule_502.py  test_rule_503.py  test_rule_600.py  test_rule_601.py
tests/architecture/: test_rule_001.py  test_rule_003.py  test_rule_004.py  test_rule_005.py  test_rule_006.py  test_rule_007.py  test_rule_008.py  test_rule_009.py  test_rule_010.py  test_rule_011.py  test_rule_012.py  test_rule_013.py  test_rule_014.py  test_rule_015.py  test_rule_016.py  test_rule_017.py  test_rule_018.py  test_rule_019.py  test_rule_020.py  test_rule_021.py  test_rule_022.py  test_rule_024.py  test_rule_025.py  test_rule_026.py  test_rule_027.py  test_rule_028.py  test_rule_029.py  test_rule_030.py  test_rule_031.py  test_rule_032.py  test_rule_033.py  test_rule_200.py  test_rule_400.py  test_rule_600.py  test_rule_601.py
tests/assert_statement/: test_rule_001.py  test_rule_002.py  test_rule_003.py  test_rule_004.py  test_rule_005.py  test_rule_100.py  test_rule_101.py  test_rule_102.py  test_rule_400.py  test_rule_500.py  test_rule_501.py  test_rule_502.py
tests/attribute/: test_rule_001.py  test_rule_002.py  test_rule_500.py
tests/attribute_declaration/: test_rule_100.py  test_rule_101.py  test_rule_300.py  test_rule_500.py  test_rule_501.py  test_rule_502.py
tests/attribute_specification/: test_rule_100.py  test_rule_101.py  test_rule_300.py  test_rule_500.py  test_rule_501.py  test_rule_502.py  test_rule_503.py
tests/block/: test_rule_001.py  test_rule_002.py  test_rule_003.py  test_rule_004.py  test_rule_005.py  test_rule_006.py  test_rule_007.py  test_rule_100.py  test_rule_101.py  test_rule_200.py  test_rule_201.py  test_rule_202.py  test_rule_203.py  test_rule_204.py  test_rule_205.py  (+15 more)
vsg/: CustomArgumentParser.py  __main__.py  __parser__.py  __rule_doc_gen__.py  apply_rules.py  block_rule.py  cmd_line_args.py  config.py  deprecated_rule.py  exceptions.py  junit.py  parser.py  prerequisite.py  proposed_rule.py  rule.py  rule_list.py  severity.py  token_map.py  tokens.py  utils.py  version.py  violation.py
(+2304 files in other folders)
