[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vsg"
description = "VHDL Style Guide"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: General",
]
keywords = [
    "beautify",
    "guide",
    "lint",
    "style",
    "vhdl",
]
dynamic = [
    "version",
]
readme = "README.rst"
requires-python = ">=3.5"

dependencies = [
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pylint",
]
tests = [
    "coverage[toml]",
    "pytest",
    "pytest-html",
    "pytest-html-reporter",
]
doc = [
    "docutils<0.18",
    "sphinx_rtd_theme==1.1.1",
    "readthedocs-sphinx-search==0.3.2",
]

[[project.authors]]
name = "Jeremiah C Leary"
email = "jeremiah.c.leary@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jeremiah-c-leary/vhdl-style-guide"
Download = "https://github.com/jeremiah-c-leary/vhdl-style-guide"

[project.scripts]
vsg = "vsg.__main__:main"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
"vsg.styles" = [
    "*.yaml",
]
"vsg.vhdlFile.indent" = [
    "*.yaml",
]

[tool.setuptools.packages.find]
exclude = [
    "build*",
    "tests*",
    "vsg_build*",
]

[tool.black]
line-length = 160

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pylint.MASTER]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.FORMAT]
max-line-length = 160

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
parallel = true
branch = true
source = [
    "vsg",
]

[tool.coverage.report]
show_missing = true

[tool.check-manifest]
ignore = [
    "*.egg-info",
    "*.egg-info/*",
    "PKG-INFO",
]
ignore-default-rules = true
